# ledger

./: .env.example  .gitignore  Claude.md  Dockerfile.backend  Dockerfile.frontend  Makefile  PLUGINS.md  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml
examples/: demo.py  demo_agent.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  style.css  types.ts
frontend/src/components/: ActionRow.vue  ActionTimeline.vue  DiffRow.vue  DiffView.vue  SessionList.vue  StatusBadge.vue
src/backstep/: __init__.py  cli.py  config.py  deps.py  diff.py  interceptor.py  mcp_tools.py  registry.py  replay.py  rollback.py  store.py  tool_registry.py
src/backstep/api/: __init__.py  main.py
src/backstep/inverses/: __init__.py  files.py
src/ledger/: __init__.py  interceptor.py  registry.py  rollback.py  store.py
tests/: test_api.py  test_cli.py  test_diff.py  test_interceptor.py  test_selective.py  test_stress.py
